完成表格功能

--- a/index.html
+++ b/index.html
@@ -47,7 +47,93 @@
 
 
     </ol>
+    <hr>
+    <h2>好文章連結</h2>
+    <li>
+        <a href="https://www.fe-amart.com.tw/index.php/life-style/life-info/secret-recipe/hero-6"
+            target='_blank'>健身初學者必看！10個常見的健身迷思
 
+        </a>
+    </li>
+    <li>
+        <a href="https://fitnesstwenty.com/benefits-of-workout/#%E5%81%A5%E8%BA%AB%E6%98%AF%E4%BB%80%E9%BA%BC%EF%BC%9F"
+            target='_blank'>健身是什麼？
+
+        </a>
+    </li>
+    <li>
+        <a href="https://fitnesstwenty.com/benefits-of-workout/#%E5%81%A5%E8%BA%AB%E7%9A%8410%E5%80%8B%E5%A5%BD%E8%99%95%EF%BC%81%EF%BC%88%E9%80%99%E4%BA%9B%E5%A5%BD%E8%99%95%E8%AA%AA%E6%98%8E%E4%BD%A0%E8%A9%B2%E5%81%A5%E8%BA%AB%E4%BA%86%EF%BC%81%EF%BC%89"
+            target='_blank'>健身的10個好處！（這些好處說明你該健身了！）
+
+        </a>
+    </li>
+    <li>
+        <a href="https://fitnesstwenty.com/benefits-of-workout/#%E5%81%A5%E8%BA%AB%E7%9A%84%E9%A1%9E%E5%9E%8B%EF%BC%88%E6%89%BE%E5%88%B0%E9%81%A9%E5%90%88%E4%BD%A0%E7%9A%84%E5%81%A5%E8%BA%AB%E6%96%B9%E5%BC%8F%EF%BC%81%EF%BC%89"
+            target='_blank'>健身的類型（找到適合你的健身方式！）
+
+        </a>
+    </li>
+    <li>
+        <a href="https://fitnesstwenty.com/benefits-of-workout/#%E7%B8%BD%E7%B5%90" target='_blank'>總結
+
+        </a>
+    </li>
+    <br>
+    <small>
+        參考連結:
+        <a target='_blank'
+            href="https://fitnesstwenty.com/benefits-of-workout/">https://fitnesstwenty.com/benefits-of-workout/</a>
+    </small>
+    <hr>
+    <h2>
+        一天所需卡路里</h2>
+    <table border="2">
+        <thead>
+            <tr>
+                <th>每天活動量</th>
+                <th>體重過輕者所需熱量</th>
+                <th>體重正常者所需熱量</th>
+                <th>體重過重、肥胖者所需熱量</th>
+
+
+            </tr>
+
+
+        </thead>
+        <tbody>
+            <tr>
+                <th>輕度工作</th>
+                <td>35大卡 X 目前體重（公斤）</td>
+                <td>30大卡 X 目前體重（公斤）</td>
+                <td>20~25大卡 X 目前體重（公斤）</td>
+            </tr>
+            <tr>
+                <th>中度工作</th>
+                <td>40大卡 X 目前體重（公斤）</td>
+                <td>35大卡 X 目前體重（公斤）</td>
+                <td>30大卡 X 目前體重（公斤）</td>
+            </tr>
+            <tr>
+                <th>重度工作</th>
+                <td>45大卡 X 目前體重（公斤）</td>
+                <td>40大卡 X 目前體重（公斤）</td>
+                <td>35大卡 X 目前體重（公斤）</td>
+            </tr>
+        </tbody>
+
+
+    </table>
+    <br>
+    <p>
+        <b><a href="">1.計算BMI:</a></b>
+        一位民眾身高160公分，體重65公斤，BMI25.4kg/m2(=65÷1.6÷1.6)，體重屬於「過重」。
+        <br>
+        <b><a href="">2.計算所需熱量:</a></b>
+        因他的工作為坐辦公室，屬輕量工作，每天攝取熱量應在1300至1625大卡之間(=20~25大卡*65公斤)。
+    </p>
+
+
+    <br> <br> <br> <br> <br> <br>
 
 </body>
 
