--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     </table>
     <br>
     <p>
-        <b><a href="">1.計算BMI:</a></b>&nbsp;
+        <b><a href="./bmi.html">1.計算BMI:</a></b>&nbsp;
         一位民眾身高160公分，體重65公斤，BMI25.4kg/m2(=65÷1.6÷1.6)，體重屬於「過重」。
         <br>
         <b><a href="">2.計算所需熱量:</a></b>
