--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
 <body>
     <!-- 輸出文字 ctrl+/-->
 
-    <h1>健身的好處</h1>
-    <h3>
+    <h1 style="color:midnightblue;background-color:aqua;">健身的好處</h1>
+    <div style="background-color:blanchedalmond;">
+        <h3>
 
-        健身，英文稱為workout，健身這兩個字拆開來的意思就是健康身體，通過各種運動方式或方法來增強力量、增加肌肉量、柔韌性、耐力，<br>以及提高協調和控制身體各部分的能力來使我們的身體更強健。</p>
+            健身，英文稱為workout，健身這兩個字拆開來的意思就是健康身體，通過各種運動方式或方法來增強力量、增加肌肉量、柔韌性、耐力，<br>以及提高協調和控制身體各部分的能力來使我們的身體更強健。
 
-    </h3>
-    <em><b>除了塑造好身材，透過健身可以刺激我們身體的肌肉，再搭配飲食的控制，這能大大幫助我們的肌肉量增加，以及讓我們的肌肉更加的結實。</b></em>
-    </p>
+
+        </h3>
+        <p style="background-color:aqua;">
+            <em><b>除了塑造好身材，透過健身可以刺激我們身體的肌肉，再搭配飲食的控制，這能大大幫助我們的肌肉量增加，以及讓我們的肌肉更加的結實。</b></em>
+        </p>
+    </div>
 
     <p>如果你對健身仍然保持著懷疑的態度，那你大可以去看看你喜歡的健身老戲骨幹，他們是如何做到年過50/60歲，依舊在
-        舞臺上或者是電影螢幕上綻放光彩。<b><u>答案就是堅持<span>運動健身!</span></u></b>
+        舞臺上或者是電影螢幕上綻放光彩。<b><u>答案就是堅持<span style="color:red;font-size:24px;font-style:italic">運動健身!</span></u></b>
     </p>
     <a href="https://fitnesstwenty.com/benefits-of-workout/" target='_blank'>
         <img src="./images/pic-3.jpg" alt="1.jpg" width="32%">
