--- a/bmi.html
+++ b/bmi.html
@@ -6,27 +6,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI計算機</title>
+    <link rel="stylesheet" href="./css/style.css">
+    <style>
+        form {
+            width: 50%;
+            margin: 24px auto;
+        }
+
+        @media screen and (max-width:768px) {
+            form {
+                width: 100%;
+            }
+
+        }
+    </style>
 </head>
 
 <body>
-    <h1>BMI計算機</h1>
-    <form action="">
-        <p>
-            <label for="name">姓名:</label>
-            <input type="text" name="name" id="name">
-        </p>
-        <p>
-            <label for="height">身高:</label>
-            <input type="number" name="height" id="height" required step="0.5">
-        </p>
-        <p>
-            <label for="kg">體重:</label>
-            <input type="number" name="kg" id="kg" required>
-        </p>
-        <button type='submit'>計算</button>
-    </form>
-    <br>
-    <a href="./index.html">回首頁</a>
+    <div id="container">
+        <div class="title">BMI計算機</div>
+        <form action="">
+            <p>
+                <label for="name">姓名:</label>
+                <input type="text" name="name" id="name">
+            </p>
+            <p>
+                <label for="height">身高:</label>
+                <input type="number" name="height" id="height" required step="0.5">
+            </p>
+            <p>
+                <label for="kg">體重:</label>
+                <input type="number" name="kg" id="kg" required>
+            </p>
+            <button type='submit'>計算</button>
+        </form>
+        <br>
+        <a href="./index.html">回首頁</a>
+    </div>
 </body>
 
 </html>
